quitado estilos por incompatibilidad. añadido OsServices refactorizado CpuServices, quitado logicas inecesarias del controlador